# cfoperator

./: .env.example  .gitignore  .gitleaksignore  DEPLOYMENT.md  Dockerfile  MCP_INTEGRATION.md  METRICS.md  README.md  agent.py  config.yaml.example  docker-compose.yml  embedding_service.py  knowledge_base.py  llm_fallback.py  local_buffer.py  mcp_server.py  requirements.txt  setup-continue.sh  sweep_comparison_results.json  test_event_runtime.py  test_github_integration.py  test_mcp.py  test_tool_calling.py  web_server.py
.github/: copilot-instructions.md
agent/: __init__.py  __main__.py  agent.py  embedding_service.py  knowledge_base.py  llm_metrics.py  ollama_pool.py  sweep_graph.py  test_iteration_thrash.py  test_learning_quality.py  test_resilient_schema.py  test_startup.py  test_sweep_skill_memo.py  test_sweep_verification.py  test_xai_provider.py
benchmarks/: ollama_latency_bench.py  qwen3-coder-results.md  qwen3.6-27b-tool-calling.md  results.md
cfassist/: pyproject.toml
cfassist-go/: .gitignore  Makefile  go.mod  go.sum
cfassist/cfassist/: __main__.py  cli.py  client.py  config.py  context.py  display.py  memory.py  streaming.py  tools.py
docs/: CONTINUE_QUICKREF.md  DEPLOYMENT.md  METRICS.md  cfoperator.code-workspace  continue-integration.md  event-driven-plugin-runtime-plan.md  event-runtime-quickstart.md  infrastructure-config.md  kubernetes-migration-plan.md  llm-observability.md  local-llm-benchmark.md  ollama-tool-calling-benchmark.md
event_runtime/: __init__.py  __main__.py  activity.py  bootstrap.py  dedupe.py  defaults.py  engine.py  (+14 more)
(+73 files in other folders)
