[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfassist"
version = "0.1.0"
description = "CLI assistant for SRE/SA work — connect to an LLM, ask questions, run tools"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
cfassist = "cfassist.cli:main"

[tool.setuptools.packages.find]
where = ["."]
